--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@
     background-color: black;
 }
 .quebracabe-a{
-    width: 450px;
-    height: ;
+    width: 900px;
+    height: 500px; 
+    display: flex;
+    flex-wrap: wrap;
 }
