--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
-{
+*{
     padding: 0;
     margin: 0;
     background-color: black;
 }
-.quebracabe-a{
+.quebra-cabeca{
     width: 900px;
     height: 500px; 
     display: flex;
